Tests/CarlTests/CompilerTests/negative/wrong-probability.carl
automaton GameOfLife {
    world {
        states { Dead, Alive }
        neighborhood: Moore(1)
        dimension: 2
    }

    rules {
        Dead -> Alive when count_neighbors(Alive) == 3 with prob 2.5
        Alive -> Dead when count_neighbors(Alive) < 2 or count_neighbors(Alive) > 3
    }
}
